@@ -1,3 +1,5 @@
+- Allow Expectation.extend to work on instances instead of prototypable objects (?!)
+  Add Context.expect as a shortcut to extend instances inside specs. [Michael Shuerig]
 - Allow something.should have(N, "elements"). If something.elements doesn't exist, 
   then it assumes something is an enumerable and calles size/gets length of it to 
   compare with N [foca]
